# machine-learning-mini-project

./: .gitignore  README.md  pyproject.toml
machine_learning_mini_project/: machine_learning_mini_project.py  machine_learning_mini_project_v2.py
